# halkoSVD

./: README.md  environment.yml  pyproject.toml  setup.py
halko/: functions.py  halkoFunctions.py  halkoMain.py  main.py  shared.pyx  shared_cy.pyx
